# mcp-architecton

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  run_tests.py  tox.ini
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml
data/: prompt_presets.json
data/patterns/: catalog.json
demo/: demo_file.py  demo_file_large.py  hex_helper.py  intelligent_refactoring_demo.py  observer_preview.py  proxy_preview.py  refactored_demo_file.py  refactored_demo_file_large.py  refactored_demo_file_large_as_borg.py  refactored_demo_file_large_strategy.py
docs/: IMPROVEMENTS.md  pipeline.md  pre-commit.md  prompt_templates.md
examples/: __init__.py  non_pythonic_large.py  non_pythonic_medium.py  non_pythonic_small.py  preview-astgrep.md  preview-header.md  preview-rope.md  transform_non_pythonic_large.py  transform_non_pythonic_small.py
scripts/: run_pipeline.py  run_server.py  scan_repo.py
src/mcp_architecton/: __init__.py  __main__.py  new_server.py  refactored_server.py  server.py
src/mcp_architecton/analysis/: __init__.py  advice_defaults.py  advice_loader.py  ast_utils.py  code_analyzer.py  enforcement.py  refactoring_engine.py  typehint_transformer.py
src/mcp_architecton/detectors/: __init__.py
src/mcp_architecton/detectors/architecture/: __init__.py  clean.py  cqrs.py  domain_events.py  front_controller.py  hexagonal.py  layered.py  message_bus.py  mvc.py  repository.py  service_layer.py  three_tier.py  unit_of_work.py
src/mcp_architecton/detectors/patterns/: __init__.py  abstract_factory.py  adapter.py  blackboard.py  borg.py  bridge.py  builder.py  catalog.py  chain_of_responsibility.py  chaining_method.py  command.py  composite.py  decorator.py  delegation_pattern.py  dependency_injection.py  facade.py  factory.py  factory_method.py  flyweight.py  graph_search.py  hsm.py  iterator.py  lazy_evaluation.py  mediator.py  memento.py  observer.py  pool.py  prototype.py  proxy.py  publish_subscribe.py  registry.py  singleton.py  specification.py  state.py  strategy.py  template_method.py  visitor.py
src/mcp_architecton/generators/: __init__.py  architectures.py  patterns.py  refactor_generator.py
src/mcp_architecton/refactors/: __init__.py  strategies.py
src/mcp_architecton/services/: __init__.py  architectures.py  astgrep.py  enforce.py  intro.py  metrics.py  patterns.py  refactors.py  rope_preview.py  scan.py
src/mcp_architecton/snippets/: __init__.py  aliases.py  api.py  catalog.py  generators.py  transforms.py
src/mcp_architecton/tools/: presets_cli.py
src/pipeline/: __init__.py  pipeline.py
src/pipeline/config/: __init__.py  settings.py
src/pipeline/stages/: __init__.py  analysis.py  quality.py  security.py  testing.py
src/pipeline/utils/: __init__.py  caching.py  reporting.py
tests/: __init__.py  test_advice_loader.py  test_advice_loader_extra.py  test_advice_loader_fallbacks.py  test_architectures_service.py  test_detect_abstract_factory.py  test_detect_adapter.py  test_detect_architecture.py  test_detect_architecture_three_tier.py  test_detect_bridge.py  test_detect_builder.py  test_detect_chain_of_responsibility.py  test_detect_command.py  test_detect_composite.py  test_detect_decorator.py  test_detect_facade.py  test_detect_facade_function.py  test_detect_factory_method.py  test_detect_flyweight.py  test_detect_front_controller.py  test_detect_iterator.py  test_detect_mediator.py  test_detect_mvc.py  test_detect_observer.py  test_detect_prototype.py  test_detect_proxy.py  test_detect_singleton.py  test_detect_strategy.py  test_detect_template_method.py  test_detect_visitor.py  test_detectors_registry_all.py  test_detectors_smoke.py  test_enforcement.py  test_enforcement_aliases.py  test_enforcement_ranked.py  test_generators_enriched.py  test_header_contract_and_prompt.py  test_introduce_directory_mode.py  test_list_patterns.py  test_metrics_service.py  (+6 more)
tests/analysis/: __init__.py  test_integration.py  test_intelligent_refactoring.py
tests/refactors/: __init__.py  test_strategies.py
tests/samples/: abstract_factory_good.py  adapter_good.py  architecture_clean_good.py  architecture_cqrs_good.py  architecture_domain_events_good.py  architecture_hexagonal_good.py  architecture_layered_good.py  architecture_message_bus_good.py  architecture_repository_good.py  architecture_service_layer_good.py  architecture_three_tier_good.py  architecture_unit_of_work_good.py  bridge_good.py  builder_good.py  chain_of_responsibility_good.py  command_good.py  composite_good.py  decorator_good.py  facade_function_good.py  facade_good.py  factory_method_good.py  flyweight_good.py  front_controller_good.py  iterator_good.py  mediator_good.py  mvc_good.py  observer_good.py  prototype_good.py  proxy_good.py  singleton_bad.py  strategy_bad.py  strategy_good.py  template_method_good.py  visitor_good.py
tests/services/: __init__.py  test_intro.py  test_patterns.py  test_scan.py
