

[project]


name = "mcp-architecton"
version = "0.1.0"
description = "MCP server for analyzing and introducing Python design patterns"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anselm Hahn", email = "anselm.hahn@gmail.com" }]
keywords = ["mcp", "design-patterns", "python", "refactoring", "analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ast-grep-py>=0.39.4",
    "astroid>=3.3.11",
    "fastmcp>=2.11.3",
    "jinja2>=3.1.6",
    "libcst>=1.8.2",
    "parso>=0.8.4",
    "radon>=6.0.1",
    "redbaron>=0.9.2",
    "rope>=1.14.0",
    "ruff>=0.13.0",
    "tree-sitter>=0.25.1",
    "tree-sitter-languages>=1.10.2",
    "tree-sitter-python>=0.23.6",
]
[project.scripts]
mcp-architecton = "mcp_architecton.server:main"
architecton-local = "scripts.run_server:main"
architecton-presets = "mcp_architecton.tools.presets_cli:main"
architecton = "mcp_architecton.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Enable ALL Ruff rule families with strategic ignores for cleaner implementation
select = ["ALL"]
ignore = [
    "E501",   # line length (handled by formatter)
    "COM812", # trailing comma (conflicts with formatter)
    "D100",   # missing module docstring
    "D101",   # missing class docstring
    "D102",   # missing method docstring
    "D103",   # missing function docstring  
    "D104",   # missing package docstring
    "D105",   # missing magic method docstring
    "D106",   # missing nested class docstring
    "D107",   # missing __init__ docstring
    "D203",   # blank line before class (conflicts with D211)
    "D212",   # multi-line summary first line (conflicts with D213)
    "ANN401", # allow Any type annotations where needed
]

[tool.ruff.lint.per-file-ignores]
"demo/*.py" = ["I001"]
"examples/non_pythonic_*.py" = [
    "PGH004",
] # allow broad ruff: noqa in illustrative anti-pattern examples
"tests/*.py" = [
    "S101",
    "SLF001",
    "D103",
    "PT009",  # Allow unittest-style assertions in tests
] # allow pytest asserts, private access in tests, missing docstrings
"src/mcp_architecton/detectors/**/*.py" = [
    "C901",   # Complex functions expected in detectors
    "PLR0912", # Many branches expected in pattern detection
    "PLR2004", # Magic values OK in pattern matching
    "PERF203", # Try-except in loops needed for robustness
]
"src/mcp_architecton/analysis/**/*.py" = [
    "PERF203", # Try-except in loops needed for robustness
]

[tool.pytest.ini_options]
addopts = "-q --cov=src/mcp_architecton --cov-report=term-missing:skip-covered --cov-report=xml:coverage.xml"
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src/mcp_architecton"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == \"__main__\":",
    'def __repr__\(\):',
    'def __str__\(\):',
    'raise NotImplementedError',
    'if TYPE_CHECKING:',
]
fail_under = 65  # Target achieved: comprehensive test coverage
precision = 1

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_architecton"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.3.0",
    "tox>=4.28.4",
    "tox-uv>=1.28.0",
    "pre-commit>=4.0.0",
    "mypy>=1.18.0",
    "types-requests",
    "bandit[toml]>=1.7.0",
    "safety>=3.0.0",
    "doc8>=1.1.0",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "astroid.*",
    "parso.*",
    "redbaron.*",
    "tree_sitter.*",
    "radon.*",
    "fastmcp.*",
    "ast_grep_py.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101", "B601", "B602", "B603"]  # Skip assert_used_test, shell=True hardcoded_tmp_directory
tests = ["B201", "B301", "B401", "B501", "B506", "B602", "B701"]

[tool.bandit.assert_used]
skip_tests = ["*_test.py", "test_*.py"]
